<resources>
    <!-- Application name -->
    <string name="app_name">THE RIDDLER</string>

    <!-- Buttons -->
    <string name="connect">Se connecter</string>
    <string name="createAccount">Créer un compte</string>
    <string name="themes">Vos Thêmes</string>
    <string name="config">Configurations</string>
    <string name="disconnect">Se déconnecter</string>
    <string name="stats">Vos Statistiques</string>
    <string name="add">Ajouter</string>
    <string name="edit">Modifier</string>
</resources>
