<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/accueil"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="37dp"
            android:fontFamily="casual"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnThemes"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="48dp"
            android:background="@color/colorBackgroundButton"
            android:fontFamily="casual"
            android:text="@string/themes"
            android:textColor="@color/colorText" />

        <Button
            android:id="@+id/btnStats"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnThemes"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="48dp"
            android:background="@color/colorBackgroundButton"
            android:fontFamily="casual"
            android:text="@string/stats"
            android:textColor="@color/colorText" />

        <Button
            android:id="@+id/btnConfig"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnStats"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="48dp"
            android:background="@color/colorBackgroundButton"
            android:fontFamily="casual"
            android:text="@string/config"
            android:textColor="@color/colorText" />

        <Button
            android:id="@+id/btnDeconnexion"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnConfig"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="48dp"
            android:background="@color/colorBackgroundButton"
            android:fontFamily="casual"
            android:text="@string/disconnect"
            android:textColor="@color/colorText" />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>